ui changes and worker process

--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -4,6 +4,8 @@
 	<title>Login</title>
 </head>
 <body>
-	<h3><a href="{{auth_url}}">Authorise Google account</a></h3>
+	<h3><a href="{{auth_url}}">Login with Google</a></h3>
+	<br>
+	<a href="{{url_for('all_users')}}">All users</a>
 </body>
 </html>
