--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -4,6 +4,16 @@
 	<title>Home</title>
 </head>
 <body>
-	<h3>You are logged in!</h3>
+	<img src="{{current_user.avatar}}?sz=30" width="50" height="50" alt="{{current_user.name}}">
+	<h3>  {{current_user.name}}</h3>
+	<br>
+	<a href="{{url_for('my_data')}}">My Data</a>
+	<br>
+	<a href="{{url_for('all_users')}}">All Users</a>
+	<br>
+	<br>
+	<hr>
+	<br>
+	<a href="{{url_for('logout')}}">   Logout  </a>
 </body>
 </html>
