--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,19 +1,68 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Home</title>
-</head>
-<body>
-	<img src="{{current_user.avatar}}?sz=30" width="50" height="50" alt="{{current_user.name}}">
-	<h3>  {{current_user.name}}</h3>
-	<br>
-	<a href="{{url_for('my_data')}}">My Data</a>
-	<br>
-	<a href="{{url_for('all_users')}}">All Users</a>
-	<br>
-	<br>
-	<hr>
-	<br>
-	<a href="{{url_for('logout')}}">   Logout  </a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v4.0.1">
+    <title>Home</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+<link href="{{ url_for('static', filename='dist/css/bootstrap.css') }}" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
+  </head>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <!-- <h3 class="masthead-brand">Cover</h3> -->
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link active" href="#">Home</a>
+        {% if current_user.is_authenticated %}
+          <a class="nav-link" href="#">{{current_user.name}}</a>
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+          <a class="nav-link" href="{{ url_for('login') }}">Sign In</a>
+        {% endif %}
+        <a class="nav-link" href="#">About Us</a>
+      </nav>
+    </div>
+  </header>
+
+  <main role="main" class="inner cover">
+    <h1 class="cover-heading">Sleep Well</h1>
+    <p class="lead">We have built a powerful but elegant application that will take care of your sleep.</p>
+    <p class="lead">
+      <a href="{{ url_for('learnm') }}" class="btn btn-lg btn-secondary">Learn more</a>
+    </p>
+  </main>
+
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p><a href="https://technoutsav.techgig.com/">&hearts; Technoutsav Deloitte</a></p>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
