--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,11 +1,67 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Login</title>
-</head>
-<body>
-	<h3><a href="{{auth_url}}">Login with Google</a></h3>
-	<br>
-	<a href="{{url_for('all_users')}}">All users</a>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v4.0.1">
+    <title>Login</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
+
+    <!-- Bootstrap core CSS -->
+<link href="{{ url_for('static', filename='dist/css/bootstrap.css') }}" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
+  </head>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <header class="masthead mb-auto">
+    <div class="inner">
+      <!-- <h3 class="masthead-brand">Cover</h3> -->
+      <nav class="nav nav-masthead justify-content-center">
+        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+        {% if current_user.is_authenticated %}
+          <a class="nav-link" href="#">{{current_user.name}}</a>
+          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+          <a class="nav-link active" href="#">Sign In</a>
+        {% endif %}
+        <a class="nav-link" href="#">About Us</a>
+      </nav>
+    </div>
+  </header>
+
+  <form class="form-signin">
+  <img class="mb-4" src="{{ url_for('static', filename='brand/google-logo.svg') }}" alt="" width="72" height="72">
+  <h1 class="h3 mb-3 font-weight-normal">Please Sign in</h1>
+  <a class="btn btn-lg btn-primary btn-block" href="{{ auth_url }}">Sign in</a>
+  <p class="mt-5 mb-3 text-muted">&hearts; Sourav · Krishna · Vishal</p>
+</form>
+
+  <footer class="mastfoot mt-auto">
+    <div class="inner">
+      <p><a href="https://technoutsav.techgig.com/">&hearts; Technoutsav Deloitte</a></p>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
