--- a/main/templates/learnm.html
+++ b/main/templates/learnm.html
@@ -91,6 +91,9 @@
 <footer class="container">
   <p>&hearts; Sourav · Krishna · Vishal</p>
 </footer>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="{{ url_for('static',filename='js/vendor/jquery.slim.min.js') }}"><\/script>')
+  </script>
+  <script src="{{ url_for('static',filename='dist/js/bootstrap.bundle.js') }}"></script>
   </body>
 </html>
