--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.0.1">
-    <title>Login</title>
+    <meta name="author" content="Vishal,Krishna ,Saurav">
+    <meta name="generator" content="">
+    <title>Sign-in</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/cover/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sign-in/">
 
     <!-- Bootstrap core CSS -->
-<link href="{{ url_for('static', filename='dist/css/bootstrap.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='assets/dist/css/bootstrap.css') }}" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -29,39 +29,59 @@
         }
       }
     </style>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+<ul class="navbar-nav mr-auto">
+  
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+        </li>
+        {% if current_user.is_authenticated %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('dashboard') }}"> {{ current_user.name }} <span class="sr-only">(current)</span></a>
+            </li>
+        {% else %}
+            <li class="nav-item active">
+              <a class="nav-link" href="{{ url_for('login') }}">Signin<span class="sr-only">(current)</span></a>
+            </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('learnmore') }}">Learn More</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('aboutus') }}">About Us</a>
+        </li>
+
+</ul>
+</div>
+</nav>
+
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='index.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='signin/signin.css') }}" rel="stylesheet">
   </head>
   <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <!-- <h3 class="masthead-brand">Cover</h3> -->
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-        {% if current_user.is_authenticated %}
-          <a class="nav-link" href="#">{{current_user.name}}</a>
-          <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-        {% else %}
-          <a class="nav-link active" href="#">Sign In</a>
-        {% endif %}
-        <a class="nav-link" href="#">About Us</a>
-      </nav>
-    </div>
-  </header>
-
-  <form class="form-signin">
-  <img class="mb-4" src="{{ url_for('static', filename='brand/google-logo.svg') }}" alt="" width="72" height="72">
+    <style>
+    body {
+    background-image: url("{{ url_for('static', filename='signin/images.jpg') }}");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    }
+    </style>
+    <form class="form-signin">
+  <img class="mb-4" src="{{ url_for('static', filename='signin/google.png') }}" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please Sign in</h1>
   <a class="btn btn-lg btn-primary btn-block" href="{{ auth_url }}">Sign in</a>
-  <p class="mt-5 mb-3 text-muted">&hearts; Sourav · Krishna · Vishal</p>
+  <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button> -->
+  <p class="mt-5 mb-3 text-muted">&hearts; Sourav Krishna Vishal</p>
 </form>
-
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p><a href="https://technoutsav.techgig.com/">&hearts; Technoutsav Deloitte</a></p>
-    </div>
-  </footer>
-</div>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='assets/js/vendor/jquery.slim.min.js') }}"><\/script>')</script>
+  <script src="{{ url_for('static', filename='assets/dist/js/bootstrap.bundle.js') }}"></script>
+
 </html>
