responsive ui with dashboard

--- a/main/templates/aboutus.html
+++ b/main/templates/aboutus.html
@@ -145,7 +145,7 @@
           alt="bulb" />
       <h2>Sourav Kumar</h2>
       <p>Pro coder</p>
-      <p><a class="btn btn-rounded" href="#" role="button">
+      <p><a class="btn btn-rounded" href="https://github.com/sourav1122" role="button">
           <i class="fa fa-github-square"></i></a>
 
       <a class="btn btn-rounded" href="https://www.linkedin.com/in/sourav-kumar-427924188/" role="button">
