--- a/main/templates/learnmore.html
+++ b/main/templates/learnmore.html
@@ -60,7 +60,7 @@
             </li>
         {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Signin</a>
+              <a class="nav-link" href="{{ url_for('login') }}">Sign in</a>
             </li>
         {% endif %}
         <li class="nav-item active">
@@ -122,23 +122,20 @@
           <img src="{{ url_for('static', filename='learnmore/table_sleep.jpg') }}" class="bd-placeholder-img rounded-circle" width="140" height="140"
             alt="Placeholder" />
 
-          <p>There are instances when we fall asleep while working.This is not really good for our health.But thsi wont
-            be a problem any more our smart application will autommatically turn off the bulbs when you are asleep </p>
+          <p>There are instances when we fall asleep while working. This is not good for our health. But this won’t be a problem any more our smart application will automatically turn off the bulbs when you are asleep.</p>
           </p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img src="{{ url_for('static', filename='learnmore/nyctophobia.jpg') }}" class="bd-placeholder-img rounded-circle" width="140" height="140"
             alt="Nyctophobia" />
-          <p>There are people who fer darkness.We are here to offer them help.Now you can go to bed with lights on and
-            our application will take care of the lights.All you need is to signin for the application from the signin
-            page. </p>
+          <p>Some people fear the darkness. We are here to offer them help. Now you can go to bed with lights on and our application will take care of the lights. All you need is to sign in for the application from the sign-in page. </p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img src="{{ url_for('static', filename='learnmore/bulb.jpg') }}" class="bd-placeholder-img rounded-circle" width="140" height="140"
             alt="bulb" />
 
-          <p>Beacuse of sleeping with lights on a lot of electricity is wasted and thsi application can help avoid that
-            wastage.So you are saving the world while sleeping and thsi alone gives you bragging rights. Subscribe now.
+          <p>Because of sleeping with lights on a lot of electricity is wasted and this application can help avoid that wastage. So you are saving the world while sleeping and You can be proud of this. Subscribe now.
+
           </p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -146,10 +143,7 @@
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Quite inexpensive <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">We will be using powerful but cheap hardware to run this application.You will be needing a
-            smartwatch,a nodeMcu ( which is a 4 $ wi-fi enabled hardware.),and internet connection.There shall be a one
-            time requirement of a computer with internet connection(to upload code in NodeMcu).This may seem overwalming
-            but its quite easy to setup.Once this thing will go for production we can go for preinstralled modules.</p>
+          <p class="lead">We will be using powerful but cheap hardware to run this application. You will be needing a smartwatch, a nodeMcu ( which is a 4 $ wi-fi enabled hardware.), and an internet connection. There shall be a one-time requirement of a computer with an internet connection(to upload code in NodeMcu). This may seem overwhelming but its quite easy to setup. Once this thing will go for production we can go for preinstalled modules.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img src="{{ url_for('static', filename='learnmore/inexpensive.jpg') }}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
@@ -166,10 +160,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Really simple to setup <span class="text-muted">It’ll blow your mind.</span>
           </h2>
-          <p class="lead">This is the prototype phase,but nonetheless , we have tried to make the setup procedure as
-            simple as possible.Whole procedure to setup this application is providesd in a extensive user mannual.All
-            you will nead to do is to follow the setup mannual and you are good to go.In case of problems will be always
-            happy to hear from you.</p>
+          <p class="lead">This is the prototype phase, but we have tried to make the setup procedure as simple as possible. The whole procedure to set up this application is provided in an extensive user manual. All you will need to do is to follow the setup manual and you are good to go. In case of problems will be always happy to hear from you.</p>
         </div>
         <div class="col-md-5 order-md-1">
           <img src="{{ url_for('static', filename='learnmore/prototyping.jpg') }}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
