--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -55,7 +55,7 @@
             </li>
         {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Signin</a>
+              <a class="nav-link" href="{{ url_for('login') }}">Sign in</a>
             </li>
         {% endif %}
         <li class="nav-item">
@@ -75,7 +75,7 @@
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='dashboard/offcanvas.css') }}" rel="stylesheet">
   </head>
-  <body class="bg-light">
+  <body class="text-center">
     
     <div class="nav-scroller bg-white shadow-sm">
       <nav class="nav nav-underline">
@@ -106,7 +106,7 @@
       <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
         <div class="d-flex justify-content-between align-items-center w-100">
           <strong class="text-gray-dark">User Manual</strong>
-          <a href="{{ url_for('download_file',filename='manual.txt') }}">Dowmload</a>
+          <a href="{{ url_for('download_file',filename='user manual.txt') }}">Download</a>
         </div>
       </div>
     </div>
