added user-manual,removed user data route

--- a/main/templates/aboutus.html
+++ b/main/templates/aboutus.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -108,7 +108,6 @@
       </style>
       <div class="container">
         <h1 class="display-5">Team TECH_CONTROL</h1>
-        <p>Lets see if team rocket wins this time.</p>
       </div>
     </div>
 
@@ -132,7 +131,7 @@
           <img src="{{ url_for('static', filename='aboutus/krishna.jpg') }}" class="bd-placeholder-img rounded-circle" width="140" height="140"
             alt="bulb" />
         <h2>Krishna Choudhary</h2>
-        <p>I love Algorithms</p>
+        <p>I like to travel.</p>
         <p><a class="btn btn-rounded" href="https://github.com/krishu1501" role="button">
             <i class="fa fa-github-square"></i></a>
 
@@ -144,7 +143,7 @@
         <img src="{{ url_for('static', filename='aboutus/sourav.jpg') }}" class="bd-placeholder-img rounded-circle" width="140" height="140"
           alt="bulb" />
       <h2>Sourav Kumar</h2>
-      <p>Pro coder</p>
+      <p>I like painting.</p>
       <p><a class="btn btn-rounded" href="https://github.com/sourav1122" role="button">
           <i class="fa fa-github-square"></i></a>
 
