--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -106,7 +106,7 @@
       <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
         <div class="d-flex justify-content-between align-items-center w-100">
           <strong class="text-gray-dark">User Manual</strong>
-          <a href="{{ url_for('download_file',filename='user manual.txt') }}">Download</a>
+          <a href="{{ url_for('download_file',filename='user_manual.pdf') }}">Download</a>
         </div>
       </div>
     </div>
