--- a/main/templates/aboutus.html
+++ b/main/templates/aboutus.html
@@ -1,83 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Vishal,Krishna ,Saurav">
-  <meta name="generator" content="">
-  <title>Aboutus</title>
-
-  <!-- Adding font awesome stylesheet for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/">
-
-
-  <!-- Bootstrap core CSS -->
-  <link href="{{ url_for('static', filename='assets/dist/css/bootstrap.css') }}" rel="stylesheet">
-
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-      aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <style>
-        body {
-          background-image: url("{{ url_for('static', filename='aboutus/images.jpg') }}");
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-size: cover;
-        }
-      </style>
-      <ul class="navbar-nav mr-auto">
-
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('index') }}">Home</a>
-        </li>
-        {% if current_user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('dashboard') }}">{{ current_user.name }}</a>
-            </li>
-        {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('login') }}">Sign in</a>
-            </li>
-        {% endif %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('learnmore') }}">Learn More</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{{ url_for('aboutus') }}">About Us<span class="sr-only">(current)</span></a>
-        </li>
-
-
-
-      </ul>
-    </div>
-  </nav>
-  <!-- Custom styles for this template -->
+{% extends "layout.html" %}
+{% block content %}
+<!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename='aboutus/aboutus.css') }}" rel="stylesheet">
-</head>
 
 <body class="text-center">
   <main role="main">
@@ -196,11 +120,5 @@ Had it not been the good wishes of the people mentioned above, we are quite sure
   <footer class="container">
     <p>&hearts; Sourav Krishna Vishal</p>
   </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='assets/js/vendor/jquery.slim.min.js') }}"><\/script>')</script>
-  <script src="{{ url_for('static', filename='assets/dist/js/bootstrap.bundle.js') }}"></script>
 </body>
-
-</html>
+{% endblock content %}
