css for linkedin and github icons visibility

--- a/main/templates/dashboard.html
+++ b/main/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<!-- <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/offcanvas/"> -->
   <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='dashboard/offcanvas.css') }}" rel="stylesheet">
   <body class="text-center">
