--- a/main/templates/learnmore.html
+++ b/main/templates/learnmore.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
+<!-- Adding font awesome stylesheet for icons -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/jumbotron/">
 <!-- Custom styles for this template -->
   <link href="{{ url_for('static', filename='learnmore/learnmore.css') }}" rel="stylesheet">
 <body class="text-center">
