slight content change

--- a/main/templates/aboutus.html
+++ b/main/templates/aboutus.html
@@ -34,7 +34,7 @@
         }
       </style>
       <div class="container">
-        <h1 class="display-5">Team TECH_CONTROL</h1>
+        <h1 class="display-4">Our Team</h1>
       </div>
     </div>
 
@@ -83,9 +83,9 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">A long journey<span class="text-muted"> indeed</span></h2>
+          <h2 class="featurette-heading">A long journey<span class="text-muted"> indeed</span></h2><br>
           <p class="lead">While registering for the event no one would have thought that this event would last so long.<br>
-            Having qualified for idea submission, we were very excited, a lot of ideas popped into our mind, some seemingly difficult some easy, members put up a lot of ideas on the table, one said maybe we can develop a software that would find the safest path to travel from a source to destination, the other that maybe we could develop an automated drone that could tackle an enemy drone swarm, one will admit that ideas were diverse, at a point we were considering to build a catapult powered drone for last-mile delivery of amazon packets. We were ambitious indeed. Lastly, we decided to build something that would benefit common people, an application that would simply” turn off the light”. What does a man desire when he is so tired that he falls asleep? that someone turns that bulb off. This stuck to us as a great idea. Something that has novelty and nobility in it.The idea that made us wonder whether this idea will even qualify for the first round of the competition. But we then finalized it. Thinking that after all simple things that not always trivial. Surely, we qualified for the idea submission and also the proof of concept round. We believe that this seemingly simple idea can make a lot of difference in the life of people who suffer from nyctophobia or similar disorders. <br>
+            Having qualified for idea submission, we were very excited, a lot of ideas popped into our mind, some seemingly difficult some easy, members put up a lot of ideas on the table, one said maybe we can develop a software that would find the safest path to travel from a source to destination, the other that maybe we could develop an automated drone that could tackle an enemy drone swarm, one will admit that ideas were diverse, at a point we were considering to build a catapult powered drone for last-mile delivery of amazon packets. We were ambitious indeed. <br><br>Lastly, we decided to build an application that would simply ”Turn off the light”. What does a man desire when he is so tired that he falls asleep? that someone turns that bulb off. This stuck to us as a great idea. Something that has novelty and nobility in it. We believe that this seemingly simple idea can make a lot of difference in the life of people who suffer from nyctophobia or similar disorders. <br>
 We are proud of being able to develop a prototype of our application.
           </p>
         </div>
